# GameProgrammingC-

Chapter_02/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
Chapter_02/include/: Actor.h  Component.h  Game.h
Chapter_02/src/: Actor.cpp  Component.cpp  Game.cpp  main.cpp
Chapter_1/: Chapter_1.sln  vcpkg.json
Chapter_1/Chapter_1/: Chapter_1.vcxproj  Game.cpp  Game.h  Main.cpp
Chapter_2/: Chapter_2.sln
Chapter_2/Chapter_2/: Chapter_2.vcxproj  Main.cpp
